k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
