k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: staging
  annotations:
    # Menggunakan NGINX Ingress Controller
    kubernetes.io/ingress.class: "nginx"
    # Anotasi umum lainnya
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.example.com # Placeholder, akan ditimpa oleh overlay
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app-service
            port:
              number: 80
